--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<button mat-button color="primary">Primary</button>
-<p>Start editing to see some magic happen :)</p>
+<app-navbar></app-navbar>
+<app-toolbar></app-toolbar>
+<app-operation></app-operation>
